--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sm-consulting-platform",
+ "name": "sm-consulting-2025",
   "version": "1.0.0",
   "description": "Plateforme de gestion des consultants IT pour SM Consulting",
   "main": "index.html",
