--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "sm-consulting-2025",
-  "version": "1.0.0",
+  "name": "it-consulting-platform",
+  "version": "1.0.0"
+}
   "description": "Plateforme de gestion des consultants IT pour SM Consulting",
   "main": "index.html",
   "scripts": {
